<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#ffffff"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
 
        <!--  Header  Starts-->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_margin="0dip"    
            android:layout_marginTop="20dip"        
            android:gravity="center|top"
            android:paddingBottom="0dip"
            android:paddingTop="20dip" >

                <!-- Logo Start-->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo" /> 

                <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        
 
        <!-- Login Form -->
        <LinearLayout         
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="40dip"
          android:padding="10dip"         
          android:layout_below="@id/header">
          <!--  Email Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="22sp"
              android:text="@string/email_or_username"
              android:textColor="#cccccc" 
              android:textStyle="bold"/>

          <EditText android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginTop="4dip"
                android:inputType="text"
                android:id="@+id/txtUsername"
                android:textSize="28sp"
                android:background="#cccccc"
                android:textColor="#000000"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
          <!--  Password Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#cccccc"
                android:textSize="22sp"
                android:textStyle="bold"            
                android:text="@string/password"/>
          <EditText android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:textSize="28sp"                
                android:background="#cccccc"
                android:id="@+id/txtPassword"
                android:textColor="#000000"
                android:inputType="textPassword"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                />
          <!-- Login button -->
          <Button android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00507d"
                android:textColor="#ffffff"
                android:layout_marginTop="20dip"
                android:textSize="30sp"
                android:text="@string/login"/>
          <!-- Link to Registration Screen -->

        
 
        </LinearLayout>
        
        <LinearLayout android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true">
             <Button
              android:id="@+id/btnRegister"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" 
              android:layout_marginBottom="0dip"
              android:layout_marginTop="0dip"
              android:gravity="center"
              android:text="@string/register"
              android:textColor="#e04006"
              android:textStyle="bold"
              android:textSize="26sp"
               />  
        </LinearLayout>
        
        <!-- Login Form Ends -->
  </RelativeLayout>
</ScrollView>
